--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p> First Number: <input type="text"> </p>
                 <p> Second Number: <input type="text"> </p>
                 <div style="display: none;"></div>
-                <button funcname="Swap">Click Me!</button>
+                <button funcname="swap">Click Me!</button>
             </form>
         </div>
         
@@ -33,7 +33,7 @@
             <form>
                 <p> First Number: <input type="text"> </p>
                 <p> Second Number: <input type="text"> </p>
-                <div style="display: none;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, neque?</div>
+                <div style="display: none;"></div>
                 <button funcname="print_range">Click Me!</button>
             </form>
         </div>
