one way of grabbing values dynamicly?

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div id="header_row">
             <h1>Algorithums by Bodega</h1>
         </div>
-    
+
         <div>
             <h3>Swap</h3>
             <p>Take 2 numbers and swap the variables they are attached to.</p>
             <form>
-                <p> First Number: <input type="text"> </p>
-                <p> Second Number: <input type="text"> </p>
+                <p> First Number: <input name="first_number" type="text" value="1"> </p>
+                <p> Second Number: <input name="second_number" value="2" type="text"> </p>
                 <div style="display: none;"></div>
                 <button funcname="swap">Click Me!</button>
             </form>
