--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h3>Swap</h3>
             <p>Take 2 numbers and swap the variables they are attached to.</p>
             <form>
-                <p> First Number: <input name="first_number" type="text" value="1"> </p>
-                <p> Second Number: <input name="second_number" value="2" type="text"> </p>
+                <p> First Number: <input name="first_number" type="text"> </p>
+                <p> Second Number: <input name="second_number"  type="text"> </p>
                 <div style="display: none;"></div>
                 <button funcname="swap">Click Me!</button>
             </form>
