trying to go back in time

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p> First Number: <input type="text"> </p>
                 <p> Second Number: <input type="text"> </p>
                 <div style="display: none;"></div>
-                <button funcname="print_range">Click Me!</button>
+                <button funcname="print_range" type="button">Click Me!</button>
             </form>
         </div>
         
