got toggle working on the divz

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-    <title>Algorithums by Bodega</title>
+    <title>Algorithums by MЯ.ƧᄂΣΣPY</title>
     <link rel='stylesheet' href='css/style.css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src='js/index.js'></script>
@@ -13,7 +13,7 @@
     <div id='container'>
         
         <div id="header_row">
-            <h1>Algorithums by Bodega</h1>
+            <h1>Algorithums by MЯ.ƧᄂΣΣPY</h1>
         </div>
 
         <div>
@@ -22,7 +22,7 @@
             <form>
                 <p> First Number: <input name="first_number" type="text"> </p>
                 <p> Second Number: <input name="second_number"  type="text"> </p>
-                <div style="display: none;"></div>
+                <div style="display: none;">asdfasdfaasdf</div>
                 <button funcname="swap">Click Me!</button>
             </form>
         </div>
@@ -33,7 +33,7 @@
             <form>
                 <p> First Number: <input type="text"> </p>
                 <p> Second Number: <input type="text"> </p>
-                <div style="display: none;"></div>
+                <div style="display: none;">asdfasdf</div>
                 <button funcname="print_range">Click Me!</button>
             </form>
         </div>
