Jquery mostly done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <form>
                 <p> First Number: <input name="first_number" type="text"> </p>
                 <p> Second Number: <input name="second_number"  type="text"> </p>
-                <div style="display: none;">asdfasdfaasdf</div>
+                <div style="display: none;"></div>
                 <button funcname="swap">Click Me!</button>
             </form>
         </div>
@@ -33,7 +33,7 @@
             <form>
                 <p> First Number: <input type="text"> </p>
                 <p> Second Number: <input type="text"> </p>
-                <div style="display: none;">asdfasdf</div>
+                <div style="display: none"></div>
                 <button funcname="print_range">Click Me!</button>
             </form>
         </div>
