--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Algorithums by MЯ.ƧᄂΣΣPY</title>
     <link rel='stylesheet' href='css/style.css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src='js/index.js'></script>
+    <script type="module" src='js/index.js'></script>
     </head>
 <body>
     <div id='container'>
